# michi-music-player

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AUDIO_LAB_STATUS_REPORT.md  CHANGELOG.md  CHECKLIST_AUDIO_FISICO.md  CONTRIBUTING.md  ESTADO.md  KNOWN_ISSUES.md  MANIFEST.in  Makefile  NOTICE  POST_PR7_MERGE_AUDIT.md  README.md  RELEASE_NOTES.md  STATUS.generated.md  THIRD_PARTY_NOTICES.md  diagnose_coverflow.py  install_arch.sh  install_ubuntu.sh  main.py  nowplaying_bar.py  pyproject.toml  requirements-dev.txt  requirements-recognition.txt
adapters/: mpris.py
artifacts/: hybrid_audit_results.json  qml-baseline.json  qml-evidence-v5.json  qml-evidence-v6.json  qml-evidence-v8.json  qml-evidence-v9.json  qml-physical-results.json  qml-results-v5.xml  qml-results-v8.xml  qml-results.xml  qml_evidence_v4.json
audio/: audio_capabilities.py  audio_chain.py  audio_diagnostics.py  audio_route_plan.py  dac_manager.py  dff_parser.py  dsd_controller.py  dsp_state.py  eq_advanced.py  eq_autoeq.py  eq_band_row.py  eq_basic.py  eq_biquad.py  eq_convert.py  eq_curve.py  eq_presets.py  fake_player.py  format_probe.py  output_device_manager.py  output_profiles.py  pipeline_factory.py  player.py  player_service.py  quality_classifier.py  replaygain.py  spectrum.py
audio_analysis/: feature_repository.py
config/: qml_migration_dimensions.json  qml_modules.yaml  qml_modules_v12.yaml  qml_modules_v13.yaml  qml_modules_v15.yaml  qml_modules_v16.yaml  qml_modules_v17.yaml  qml_modules_v18.yaml  qml_modules_v19.yaml  qwidget_decommission_matrix.yaml  service_dependencies.yaml
core/: accessibility_service.py  ai_engine.py  album_enrichment_service.py  album_service.py  app_context.py  app_services.py  application_bootstrap.py  artist_enrichment_service.py  artist_service.py  assistant_context_providers.py  assistant_gateways.py  assistant_initializer.py  assistant_metadata_gateway.py  background_theme_service.py  confirmation_service.py  connection_factory.py  connection_service.py  cover_art_service.py  crash_reporter.py  debounced_query_controller.py  dependency_graph.py  device_discovery_service.py  device_sync_service.py  diagnostics_service.py  disc_lab_service.py  equalizer_service.py  event_bus.py  external_process.py  feature_manager.py  file_actions.py  file_manager_service.py  folder_service.py  genres_service.py  global_search_service.py  history_export_service.py  history_query_service.py  home_audio_service.py  http_client.py  interfaces.py  job_service.py  (+49 more)
data/: com.astra.MusicPlayer.metainfo.xml  com.astra.MusicPlayer.yml  com.michi.MusicPlayer.metainfo.xml  com.michi.MusicPlayer.yml  michi-music-player.desktop
docs/: ALBUM_QML_MIGRATION_PLAN.md  ALPHA2_RC_VALIDATION_REPORT.md  BETA_CHECKLIST.md  BETA_PRODUCT_AUDIT.md  BETA_READINESS_REPORT.md  CHERRYPICK_FIXES_REPORT.md  CODEX_UIUX_FOUNDATIONS_AUDIT.md  CODEX_UI_ACCESSIBILITY_SPEC.md  CODEX_UI_ADOPTION_MAP.md  CODEX_UI_COMPONENT_INVENTORY.md  CODEX_UI_ICON_INVENTORY.md  CODEX_UI_RESPONSIVE_SPEC.md  CODEX_UI_TOKEN_GAPS.md  CONTEXT_SYSTEM.md  CONTINUE_ON_SERVER_FLOW.md  CONTINUE_ON_SERVER_RECOVERY.md  CORE_SERVICES_CAPABILITY_MATRIX.md  CORE_SERVICES_CONVERGENCE_ARCHITECTURE.md  CORE_SERVICES_CONVERGENCE_BASELINE.md  CORE_SERVICES_CONVERGENCE_REPORT.md  CORE_SERVICES_LIFECYCLE.md  CORE_SERVICES_SOURCE_MANIFEST.md  FEATURE_STATUS.md  FINALIZATION_REPORT.md  FOLDERS.md  HOME_DASHBOARD.md  ICON_GUIDELINES.md  IMPORT_TO_SERVER_FLOW.md  KNOWN_ISSUES.md  LYRICS_CORE_V2.md  LYRICS_CORE_V2_BASELINE.md  LYRICS_INTEGRATION_CONTRACT.md  LYRICS_PROVIDER_AUDIT.md  LYRICS_QWIDGET_EXTRACTION_PLAN.md  METADATA_CORE_V2.md  METADATA_CORE_V2_BASELINE.md  METADATA_QML_INTEGRATION_BASELINE.md  MICHI_AI.md  MICHI_AI_CORE_V2_BASELINE.md  MICHI_AI_CORE_V2_CLOSURE_REPORT.md  (+122 more)
ha_custom_component/: __init__.py  api.py  const.py  media_player.py  media_source.py
integrations/: home_audio_errors.py  home_audio_service.py  micro_server_service.py
lyrics/: lrclib_client.py
metadata/: __init__.py  album_info_repository.py  album_summary.py  artwork_utils.py  genre_normalizer.py  metadata_diagnostics.py  rename_engine.py  tag_actions.py  tag_model.py  tag_reader.py  tag_writer.py
michi/: app_launcher.py  qml_app.py  verify_app.py  widgets_app.py
michi_ai/: __init__.py  assistant_errors.py  audit_tools.py  engine.py  intent_classifier.py  recommender.py  response_composer.py
openspec/: config.yaml
packaging/legacy/: pyproject.toml
recognition/: audio_capture_service.py  base_recognizer.py  deduplication.py  detection_history_repository.py  detection_service.py  identifier_controller.py  matching.py  models.py  null_recognizer.py  provider_manager.py  recognition_matcher.py
recommendation/: recommendation_repository.py
scripts/: add_qml_accessibility.py  add_qml_control_accessibility.py  audit_bridge_contracts.py  audit_legacy_gate.py  audit_legacy_widgets.py  audit_qml_parity.py  audit_qtwidgets_imports.py  build_wheel.sh  capture_uiux_baseline.py  capture_ux_screenshots.sh  check_runtime.py  ci_canonical.sh  ci_local.sh  create_pr.sh  create_release.sh  diagnose_hybrid_audio.py  fix_qml_bulk.py  fix_qml_clean.py  fix_qml_final.py  fix_qml_precise.py  fix_qml_smart.py  generate_status.py  install.sh  install_arch.sh  install_debian_ubuntu.sh  install_fedora.sh  install_opensuse.sh  qml_100_percent_gate.py  qml_100_real_gate.py  qml_action_handler_audit_v18.py  qml_action_handler_audit_v19.py  qml_bridge_contract_audit.py  qml_ci_gate.py  qml_compile_all.py  qml_compile_all_v11.py  qml_compile_all_v13.py  qml_compile_all_v15.py  qml_compile_all_v16.py  qml_compile_all_v17.py  qml_compile_all_v18.py  (+113 more)
sources/: base_source.py  broadcast_source.py  folder_source.py  local_source.py  subsonic_source.py
streaming/: broadcast_diagnostics.py  broadcast_history.py  podcast_downloads.py  podcast_feed_parser.py  podcast_manager.py  podcast_models.py  podcast_repository.py  radio_dialog.py  radio_manager.py  radio_widget.py  remote_browser.py  server_dialog.py  subsonic_client.py  transmit_manager.py
ui/: icons.py  (+53 more)
(+2461 files in other folders)
