[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "michi-music-player"
version = "0.2.0-alpha.1"
description = "Modern music player for Linux/KDE built with Python, PySide6 and GStreamer"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Cristian"}
]
keywords = [
    "music-player", "linux", "kde", "plasma", "gstreamer",
    "pyside6", "qt6", "subsonic", "navidrome", "jellyfin",
    "audio-player", "sqlite"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "PySide6>=6.7",
    "mutagen>=1.47",
    "numpy>=1.24",
    "pillow>=10",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
    "pytest-timeout>=2",
    "pytest-asyncio>=0.24",
    "ruff",
]
recognition = [
    "shazamio",
    "pyaudio",
]
audio-analysis = [
    "librosa>=0.10",
    "soundfile>=0.12",
]
kde = []     # system deps only: python3-gi, gstreamer1.0-plugins-*
home_audio = []  # system deps: avahi-utils
sync = []    # no extra pip deps required
all = [
    "pytest>=7",
    "pytest-qt>=4",
    "pytest-timeout>=2",
    "ruff",
    "shazamio",
    "pyaudio",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.urls]
Homepage = "https://github.com/pitydah/michi-music-player"
Repository = "https://github.com/pitydah/michi-music-player.git"
Issues = "https://github.com/pitydah/michi-music-player/issues"

[project.scripts]
michi = "michi.app_launcher:launch"
michi-qml = "michi.qml_app:run_qml"
michi-widgets = "michi.widgets_app:run_widgets"
michi-qml-verify = "michi.verify_app:run_verify"
michi-music-player = "michi.app_launcher:launch"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "tools*", "ha_custom_component*", "legacy_widgets*", "__pycache__*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in arg defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "SIM103", "E402", "F811"]
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
timeout = 120
asyncio_mode = "auto"
addopts = "-m 'not perf and not hardware'"
markers = [
    "hardware: tests requiring physical DAC/audio hardware",
    "perf: performance tests, run manually with -m perf",
    "isolation: tests requiring process isolation due to connection caching",
    "qml_module: QML module name for evidence V5 mapping",
    "qml_dimension: QML migration dimension for evidence V5 scoring",
]

# ── EL: Package separation ──
# michi-core:           audio/, core/, michi_ai/, config/
# michi-qml:            michi/ (launcher), ui_qml/, ui_qml_bridge/ (NO QtWidgets dependency)
# michi-widgets-legacy: ui/, legacy_widgets/ (depends on michi-core, optional)

# Linux platform extras:
#   wayland, x11, kde, desktop file, notifications, media keys
# Windows platform extras:
#   paths, reserved names, ffmpeg, mtp, shortcuts, packaging, notifications
