[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "michi-music-player"
version = "0.10.0-alpha.1"
description = "Modern music player for Linux/KDE built with Python, PySide6 and GStreamer"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Cristian"}
]
keywords = [
    "music-player", "linux", "kde", "plasma", "gstreamer",
    "pyside6", "qt6", "subsonic", "navidrome", "jellyfin",
    "audio-player", "sqlite"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "PySide6>=6.7",
    "mutagen>=1.47",
    "numpy>=1.24",
    "pillow>=10",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
    "pytest-timeout>=2",
    "pytest-asyncio>=0.24",
    "ruff",
]
recognition = [
    "shazamio",
    "pyaudio",
]
audio-analysis = [
    "librosa>=0.10",
    "soundfile>=0.12",
]
kde = []     # system deps only: python3-gi, gstreamer1.0-plugins-*
home_audio = []  # system deps: avahi-utils
sync = []    # no extra pip deps required
mobile = ["qrcode[pil]"]
all = [
    "pytest>=7",
    "pytest-qt>=4",
    "pytest-timeout>=2",
    "ruff",
    "shazamio",
    "pyaudio",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.urls]
Homepage = "https://github.com/pitydah/michi-music-player"
Repository = "https://github.com/pitydah/michi-music-player.git"
Issues = "https://github.com/pitydah/michi-music-player/issues"

[project.scripts]
michi = "michi.qml_app:run_qml"
michi-verify = "michi.verify_app:run_verify"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ui_qml = ["*.qml", "*.js", "qmldir", "**/*.qml", "**/*.js", "**/qmldir"]
icons = ["*.svg", "*.png"]
config = ["*.yaml", "*.yml"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "tools*", "ha_custom_component*", "legacy_widgets*", "ui", "ui.*", "michi_ai/ui*", "__pycache__*"]
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in arg defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "SIM103", "E402", "F811", "SIM102", "E741", "F821", "SIM117", "SIM115", "SIM105", "B017", "F841", "B007"]
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-m 'not perf and not hardware'"
timeout = 120
asyncio_mode = "auto"
markers = [
    "hardware: tests requiring physical DAC/audio hardware",
    "perf: performance tests, run manually with -m perf",
    "isolation: tests requiring process isolation due to connection caching",
    "qml_module: QML module name for evidence V5 mapping",
    "qml_dimension: QML migration dimension for evidence V5 scoring",
    "recognition: tests requiring audio recognition services (PyAudio, etc.)",
]

# ── EL: Package separation ──
# michi-core:           audio/, core/, michi_ai/, config/
# michi-qml:            michi/ (launcher), ui_qml/, ui_qml_bridge/

# Linux platform extras:
#   wayland, x11, kde, desktop file, notifications, media keys
# Windows platform extras:
#   paths, reserved names, ffmpeg, mtp, shortcuts, packaging, notifications
